--- a/MonteyHall.Web/Pages/Index.cshtml
+++ b/MonteyHall.Web/Pages/Index.cshtml
@@ -5,6 +5,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to The Monty Hall Show</h1>
+    <p><a asp-area="" asp-page="/MontyHallGame">Click here to Play Game</a></p>
 </div>
